# vamp

./: .gitignore  AGENTS.md  README.md  Resource.h  copyAssets.ps1  copyFromUSB.ps1  copyToUSB.ps1  copy_assets.ps1  fighting.md  terms.md  vampire.cpp  vampire.rc  vampire.sln  vampire.vcxproj  vampire.vcxproj.filters
MCP/: CMakeLists.txt  README.md
MCP/src/: main.cpp
editor/: EditorMode.cpp  EditorMode.h
engine/: BackgroundPager.cpp  BackgroundPager.h  Camera2D.h  DescriptorAllocator.cpp  DescriptorAllocator.h  Engine.h  EngineTypes.h  FogRenderer.cpp  FogRenderer.h  Grid.h  InputSystem.h  LightSystem.h  OccluderSet.h  PipelineStates.cpp  PipelineStates.h  RenderQueue.h  RenderTarget.cpp  RenderTarget.h  RendererD3D12.cpp  RendererD3D12.h  RoofSystem.h  SceneRenderer.cpp  SceneRenderer.h  SpriteAtlas.h  Texture2D.cpp  Texture2D.h  UploadManager.cpp  UploadManager.h
game/: Armor.h  Attributes.h  Character.cpp  Character.h  CombatSystem.cpp  CombatSystem.h  CoverSystem.cpp  CoverSystem.h  Dice.cpp  Dice.h  Discipline.cpp  Discipline.h  FogOfWar.cpp  FogOfWar.h  GameSystems.h  GameWorld.cpp  GameWorld.h  GenerateTestScene.cpp  GenerateTestScene.h  Inventory.cpp  Inventory.h  MapTile.h  SceneData.h  SceneFile.cpp  SceneFile.h  SceneLoader.cpp  SceneLoader.h  Skill.cpp  Skill.h  SkillDefs.h  SleepSystem.cpp  SleepSystem.h  SocialSystem.cpp  SocialSystem.h  StatusEffect.cpp  StatusEffect.h  Weapon.h
ui/: BitmapFont.cpp  BitmapFont.h  UI.h  UIDropdown.h  UIElement.h  UILabel.h  UIPanel.h  UIRenderer.cpp  UIRenderer.h  UISystem.cpp  UISystem.h  UITypes.h
(+11 files in other folders)
